<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.HomeActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.addisonelliott.segmentedbutton.SegmentedButtonGroup
        android:id="@+id/btn_filter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="18dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="18dp"
        android:background="@color/white"
        android:elevation="2dp"
        app:borderColor="@color/primaryDarkColor"
        app:borderWidth="1dp"
        app:divider="@color/primaryLightColor"
        app:dividerPadding="10dp"
        app:dividerWidth="1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:position="0"
        app:radius="30dp"
        app:ripple="true"
        app:rippleColor="@color/primaryColor"
        app:selectedBackground="@color/primaryLightColor">

        <com.addisonelliott.segmentedbutton.SegmentedButton
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="10dp"
            app:selectedTextColor="@color/primaryDarkColor"
            app:text="Today"
            app:textColor="@color/primaryTextColor" />

        <com.addisonelliott.segmentedbutton.SegmentedButton
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="10dp"
            app:selectedTextColor="@color/primaryDarkColor"
            app:text="Past Week"
            app:textColor="@color/primaryTextColor" />

        <com.addisonelliott.segmentedbutton.SegmentedButton
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:selectedTextColor="@color/primaryDarkColor"
            app:text="Past Month"
            app:textColor="@color/primaryTextColor" />
    </com.addisonelliott.segmentedbutton.SegmentedButtonGroup>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/refresher"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_filter">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
</androidx.constraintlayout.widget.ConstraintLayout>